<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_security_settings"
        android:title="@string/security">
        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="pref_key_security_pin"
            android:password="true"
            android:summary="@string/pin_summary"
            android:title="@string/pin" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_backup_settings"
        android:title="@string/backup">
    <Preference
        android:title="@string/create_backup"
        android:key="pref_key_create_backup"
        android:summary="@string/create_backup_summary"/>

    </PreferenceCategory>

</PreferenceScreen>